[package]
name = "monad-constraints"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "statelist",
]

[dependencies]
persi-ds = { git = "https://github.com/kod-kristoff/persi-ds" }
statelist = { path = "./statelist" }


